--- a/scss/_components.row.scss
+++ b/scss/_components.row.scss
@@ -55,7 +55,9 @@
 .c-row--top {
     background-color: palette(color-alpha, base);
     z-index: 30;
-    box-shadow: 0 0 0 1px rgba(palette(color-neutral,xxxxx-light),.15);
+    // box-shadow: 0 0 0 1px rgba(palette(color-neutral,xxxxx-light),.15);
+    border-bottom: 1px solid rgba(palette(color-neutral,xxxxx-light),.15);
+
     @include padding-tb($alpha-leading * .5, $alpha-leading * .5);
 }
 
